fix h1 to h4 in index.html

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <img src="assets/img/logo.svg" class="w-32 md:w-48 mb-8" alt="Logo">
     
     <p class="uppercase tracking-[0.4em] text-xs mb-4 text-[#8C7E6A]">GKSBS TANJUNGKARANG</p>
-    <h1 class="font-serif text-6xl md:text-8xl text-[#D4AF37] mb-8">Undangan Rapat</h1>
+    <h4 class="font-inter text-6xl md:text-8xl text-[#D4AF37] mb-8">Undangan Rapat</h4>
 
     <div class="flex gap-4 md:gap-8 mb-12">
         <div class="text-center">
