--- a/index.html
+++ b/index.html
@@ -111,34 +111,47 @@
 </head>
 <body class="bg-[#FDFCF8] font-sans text-[#4A4A4A]">
 
-    <section class="min-h-screen flex flex-col items-center justify-center p-8 text-center bg-[#FDFCF8]">
-    <img src="assets/img/logo.svg" class="w-32 md:w-48 mb-8" alt="Logo">
-    
-    <p class="uppercase tracking-[0.4em] text-xs mb-4 text-[#8C7E6A]">GKSBS TANJUNGKARANG</p>
-    <h4 class="font-inter text-6xl md:text-8xl text-[#D4AF37] mb-8">Undangan Rapat</h4>
-
-    <div class="flex gap-4 md:gap-8 mb-12">
-        <div class="text-center">
-            <span id="days" class="block text-3xl md:text-5xl font-serif text-[#D4AF37]">00</span>
-            <span class="text-[10px] uppercase tracking-widest text-stone-500">Hari</span>
-        </div>
-        <div class="text-center">
-            <span id="hours" class="block text-3xl md:text-5xl font-serif text-[#D4AF37]">00</span>
-            <span class="text-[10px] uppercase tracking-widest text-stone-500">Jam</span>
-        </div>
-        <div class="text-center">
-            <span id="minutes" class="block text-3xl md:text-5xl font-serif text-[#D4AF37]">00</span>
-            <span class="text-[10px] uppercase tracking-widest text-stone-500">Menit</span>
-        </div>
+   <section class="min-h-screen flex flex-col items-center justify-center p-6 text-center reveal">
+    <div class="mb-12">
+        <img src="assets/img/logo.svg" class="w-20 md:w-28 mx-auto mb-6 hover:opacity-80 transition-opacity duration-500" alt="Logo GKSBS">
+        <span class="ap-sub">GKSBS Tanjungkarang</span>
     </div>
-
-    <div class="mb-12 py-3 px-6 bg-white rounded-full shadow-sm border border-stone-100">
-        <p class="text-sm text-stone-600">
-            <span id="guestCount" class="font-bold text-[#D4AF37]">0</span> Orang telah konfirmasi hadir
+    
+    <div class="mb-12">
+        <h1 class="text-ap-hero">
+            Undangan <span class="font-conditional-serif font-medium text-gksbs-gold">Rapat</span>
+        </h1>
+        <p class="mt-4 text-ap-body max-w-sm mx-auto font-light">
+            Melayani dengan Kasih dan Kesetiaan dalam satu persekutuan.
         </p>
     </div>
 
-    <a href="main.html" class="px-10 py-4 bg-[#D4AF37] text-white rounded-full uppercase tracking-widest text-sm hover:bg-[#B8962E] transition-all">
+    <div class="flex items-center justify-center gap-8 md:gap-16 mb-16 border-y border-ap-grey/10 py-10">
+        <div class="text-center">
+            <span id="days" class="block text-4xl md:text-6xl font-light tracking-tighter text-ap-black">00</span>
+            <span class="ap-sub !mb-0 !text-[9px]">Hari</span>
+        </div>
+        <div class="text-center border-l border-ap-grey/20 pl-8 md:pl-16">
+            <span id="hours" class="block text-4xl md:text-6xl font-light tracking-tighter text-ap-black">00</span>
+            <span class="ap-sub !mb-0 !text-[9px]">Jam</span>
+        </div>
+        <div class="text-center border-l border-ap-grey/20 pl-8 md:pl-16">
+            <span id="minutes" class="block text-4xl md:text-6xl font-light tracking-tighter text-ap-black">00</span>
+            <span class="ap-sub !mb-0 !text-[9px]">Menit</span>
+        </div>
+    </div>
+
+    <div class="mb-12 inline-flex items-center gap-2.5 px-6 py-2.5 bg-white border border-ap-grey/20 rounded-full shadow-sm">
+        <span class="relative flex h-2 w-2">
+            <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
+            <span class="relative inline-flex rounded-full h-2 w-2 bg-green-500"></span>
+        </span>
+        <p class="text-[13px] font-medium text-ap-black">
+            <span id="guestCount" class="font-bold">0</span> Jemaat telah konfirmasi
+        </p>
+    </div>
+
+    <a href="main.html" class="ap-btn-primary shadow-xl shadow-ap-blue/20 text-sm tracking-wide">
         Buka Undangan
     </a>
 </section>
