fix background color

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <style>
         /* Global Smoothing */
         body {
-            background-color: #FBFBFD;
+            background-color: #f6f6f6;
             color: #1D1D1F;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
@@ -109,7 +109,7 @@
         .reveal { animation: reveal 0.8s cubic-bezier(0.2, 0.8, 0.2, 1) forwards; }
     </style>
 </head>
-<body class="bg-[#FDFCF8] font-sans text-[#4A4A4A]">
+<body class="bg-[#f6f6f6] font-sans text-[#4A4A4A]">
 
    <section class="min-h-screen flex flex-col items-center justify-center p-6 text-center reveal">
     <div class="mb-12">
