--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
     </div>
 
-    <div class="mb-12 inline-flex items-center gap-2.5 px-6 py-2.5 bg-white border border-ap-grey/20 rounded-full shadow-sm">
+    <div class="mb-12 inline-flex items-center gap-2.5 px-6 py-2.5">
         <span class="relative flex h-2 w-2">
             <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
             <span class="relative inline-flex rounded-full h-2 w-2 bg-green-500"></span>
