--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
    <section class="min-h-screen flex flex-col items-center justify-center p-6 text-center reveal">
     <div class="mb-12">
         <img src="assets/img/logo.svg" class="w-20 md:w-28 mx-auto mb-6 hover:opacity-80 transition-opacity duration-500" alt="Logo GKSBS">
-        <span class="ap-sub">GKSBS Tanjungkarang</span>
+        <span class="ap-title">GKSBS Tanjungkarang</span>
     </div>
     
     <div class="mb-12">
-        <h1 class="text-ap-hero">
-            Undangan <span class="font-conditional-serif font-medium text-gksbs-gold">Rapat</span>
+        <h1 class="text-ap-title font-conditional-serif">
+            Undangan <span class="font-conditional-serif font-medium">Rapat</span>
         </h1>
         <p class="mt-4 text-ap-body max-w-sm mx-auto font-light">
             Melayani dengan Kasih dan Kesetiaan dalam satu persekutuan.
