--- a/index.html
+++ b/index.html
@@ -112,48 +112,51 @@
 <body class="bg-[#ffffff] font-sans text-[#4A4A4A]">
 
    <section class="min-h-screen flex flex-col items-center justify-center p-6 text-center reveal">
-    <div class="mb-12">
-        <img src="assets/img/logo.svg" class="w-20 md:w-28 mx-auto mb-6 hover:opacity-80 transition-opacity duration-500" alt="Logo GKSBS">
-        <span class="ap-title">GKSBS Tanjungkarang</span>
+    <div class="mb-10">
+    <img src="assets/img/logo.svg" class="w-28 md:w-36 mx-auto mb-6 hover:opacity-80 transition-opacity duration-500" alt="Logo GKSBS">
+    <span class="ap-sub !mb-0">GKSBS Tanjungkarang</span>
     </div>
     
-    <div class="mb-12">
-        <h1 class="text-ap-title font-conditional-serif">
+    <div class="mb-10">
+        <h1 class="text-ap-title">
             Undangan <span class="font-conditional-serif font-medium">Rapat</span>
         </h1>
-        <p class="mt-4 text-ap-body max-w-sm mx-auto font-light">
+        <p class="mt-3 text-ap-body max-w-sm mx-auto font-light leading-relaxed">
             Melayani dengan Kasih dan Kesetiaan dalam satu persekutuan.
         </p>
     </div>
 
-    <div class="flex items-center justify-center gap-8 md:gap-16 mb-16 border-y border-ap-grey/10 py-10">
-        <div class="text-center">
-            <span id="days" class="block text-4xl md:text-6xl font-light tracking-tighter text-ap-black">00</span>
-            <span class="ap-sub !mb-0 !text-[9px]">Hari</span>
+    <div class="w-full max-w-lg mx-auto flex flex-col items-center">
+        
+        <div class="w-full flex items-center justify-center gap-8 md:gap-14 border-y border-ap-grey/10 py-8">
+            <div class="text-center">
+                <span id="days" class="block text-4xl md:text-5xl font-light tracking-tighter text-ap-black">00</span>
+                <span class="ap-sub !mb-0 !text-[8px]">Hari</span>
+            </div>
+            <div class="text-center border-l border-ap-grey/20 pl-8 md:pl-14">
+                <span id="hours" class="block text-4xl md:text-5xl font-light tracking-tighter text-ap-black">00</span>
+                <span class="ap-sub !mb-0 !text-[8px]">Jam</span>
+            </div>
+            <div class="text-center border-l border-ap-grey/20 pl-8 md:pl-14">
+                <span id="minutes" class="block text-4xl md:text-5xl font-light tracking-tighter text-ap-black">00</span>
+                <span class="ap-sub !mb-0 !text-[8px]">Menit</span>
+            </div>
         </div>
-        <div class="text-center border-l border-ap-grey/20 pl-8 md:pl-16">
-            <span id="hours" class="block text-4xl md:text-6xl font-light tracking-tighter text-ap-black">00</span>
-            <span class="ap-sub !mb-0 !text-[9px]">Jam</span>
-        </div>
-        <div class="text-center border-l border-ap-grey/20 pl-8 md:pl-16">
-            <span id="minutes" class="block text-4xl md:text-6xl font-light tracking-tighter text-ap-black">00</span>
-            <span class="ap-sub !mb-0 !text-[9px]">Menit</span>
-        </div>
-    </div>
 
-    <div class="mb-12 inline-flex items-center gap-2.5 px-6 py-2.5">
-        <span class="relative flex h-2 w-2">
-            <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
-            <span class="relative inline-flex rounded-full h-2 w-2 bg-green-500"></span>
-        </span>
-        <p class="text-[13px] font-medium text-ap-black">
-            <span id="guestCount" class="font-bold">0</span> Jemaat telah konfirmasi
-        </p>
-    </div>
+        <div class="mt-8 mb-8 inline-flex items-center gap-2">
+            <span class="relative flex h-2 w-2">
+                <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
+                <span class="relative inline-flex rounded-full h-2 w-2 bg-green-500"></span>
+            </span>
+            <p class="text-[13px] font-medium text-ap-black tracking-tight">
+                <span id="guestCount" class="font-bold">0</span> Jemaat telah konfirmasi
+            </p>
+        </div>
 
-    <a href="main.html" class="ap-btn-primary shadow-xl shadow-ap-blue/20 text-sm tracking-wide">
-        Buka Undangan
-    </a>
+        <a href="main.html" class="ap-btn-primary shadow-xl shadow-ap-blue/15 text-[13px] tracking-wide px-12">
+            Buka Undangan
+        </a>
+    </div>
 </section>
 <script>
     // Set target waktu: 1 April 2026
