refine: update countdown timer labels to have consistent font size

--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
             <div class="w-full flex items-center justify-center gap-6 md:gap-10 border-y border-white/10 py-8 backdrop-blur-[2px]">
                 <div class="text-center text-white">
                     <span id="days" class="block text-4xl md:text-5xl font-light tracking-tighter">00</span>
-                    <span class="text-ap-body !text-white/60 font-medium uppercase tracking-widest text-[8px]">Hari</span>
+                    <span class="text-ap-body !text-white/60 font-medium uppercase tracking-widest !text-[10px]">Hari</span>
                 </div>
                 <div class="text-center border-l border-white/10 pl-6 md:pl-10 text-white">
                     <span id="hours" class="block text-4xl md:text-5xl font-light tracking-tighter">00</span>
-                    <span class="text-ap-body !text-white/60 font-medium uppercase tracking-widest text-[8px]">Jam</span>
+                    <span class="text-ap-body !text-white/60 font-medium uppercase tracking-widest !text-[10px]">Jam</span>
                 </div>
                 <div class="text-center border-l border-white/10 pl-6 md:pl-10 text-white">
                     <span id="minutes" class="block text-4xl md:text-5xl font-light tracking-tighter">00</span>
-                    <span class="text-ap-body !text-white/60 font-medium uppercase tracking-widest text-[8px]">Menit</span>
+                    <span class="text-ap-body !text-white/60 font-medium uppercase tracking-widest !text-[10px]">Menit</span>
                 </div>
                 <div class="text-center border-l border-white/10 pl-6 md:pl-10 text-white">
                     <span id="seconds" class="block text-4xl md:text-5xl font-light tracking-tighter text-gksbs-gold">00</span>
-                    <span class="text-ap-body !text-white/60 font-medium uppercase tracking-widest text-[8px]">Detik</span>
+                    <span class="text-ap-body !text-white/60 font-medium uppercase tracking-widest !text-[10px]">Detik</span>
                 </div>
             </div>
 
