added: assets/img/thumbnail.png

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GKSBS Event — Digital Invitation</title>
+    <meta name="title" content="Undangan Rapat GKSBS Tanjungkarang">
+    <meta name="description" content="Melayani dengan Kasih dan Kesetiaan dalam satu persekutuan. Mohon kehadiran Bapak/Ibu/Saudara/i.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gksbstaka.github.io/undangan-rsvp/">
+    <meta property="og:title" content="Undangan Rapat GKSBS Tanjungkarang">
+    <meta property="og:description" content="Melayani dengan Kasih dan Kesetiaan dalam satu persekutuan.">
+    <meta property="og:image" content="https://gksbstaka.github.io/undangan-rsvp/assets/img/thumbnail.jpg">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://gksbstaka.github.io/undangan-rsvp/">
+    <meta property="twitter:title" content="Undangan Rapat GKSBS Tanjungkarang">
+    <meta property="twitter:description" content="Melayani dengan Kasih dan Kesetiaan dalam satu persekutuan.">
+    <meta property="twitter:image" content="https://gksbstaka.github.io/undangan-rsvp/assets/img/thumbnail.jpg">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
