--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 Undangan <span class="font-sans font-semibold text-white/90">Rapat</span>
             </h1>
             <p class="mt-4 text-ap-body max-w-sm mx-auto font-light text-white/70">
-                Melayani dengan Kasih dan Kesetiaan dalam satu persekutuan.
+                01 April 2026, 09:00 WIB<br>
             </p>
         </div>
 
