--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </div>
 
             <a href="main.html" 
-               class="px-14 py-4 rounded-full border border-white/20 bg-white/10 backdrop-blur-md text-white text-xs font-semibold tracking-widest transition-all duration-500 hover:bg-ap-blue hover:border-ap-blue hover:shadow-[0_0_20px_rgba(0,113,227,0.4)] active:scale-95">
+               class="px-14 py-4 rounded-full border border-white/20 bg-white/10 backdrop-blur-md text-white text-ap-body font-semibold tracking-widest transition-all duration-500 hover:bg-ap-blue hover:border-ap-blue hover:shadow-[0_0_20px_rgba(0,113,227,0.4)] active:scale-95">
                 BUKA UNDANGAN
             </a>
         </div>
