--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://gksbstaka.github.io/undangan-rsvp/">
     <meta property="og:title" content="Undangan Rapat GKSBS Tanjungkarang">
     <meta property="og:description" content="Melayani dengan Kasih dan Kesetiaan dalam satu persekutuan.">
-    <meta property="og:image" content="https://gksbstaka.github.io/undangan-rsvp/assets/img/thumbnail.jpg">
+    <meta property="og:image" content="https://gksbstaka.github.io/undangan-rsvp/assets/img/thumbnail.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gksbstaka.github.io/undangan-rsvp/">
