--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
         
         <div class="mb-10">
             <img src="assets/img/logo.svg" class="w-28 md:w-32 mx-auto mb-4 brightness-0 invert opacity-90" alt="Logo">
-            <span class="ap-sub !text-white/50 !mb-0 font-medium">GKSBS TANJUNGKARANG</span>
+            <span class="ap-sub !text-white/100 !mb-0 font-medium tracking-widest">GKSBS TANJUNGKARANG</span>
         </div>
         
         <div class="mb-10">
-            <h1 class="text-ap-hero text-white">
-                Undangan <span class="font-sans font-semibold text-white/90">Rapat</span>
+            <h1 class="text-ap-title text-white !text-[45px]">
+                Undangan <span class="font-sans font-semibold text-white/100">Rapat</span>
             </h1>
-            <p class="mt-4 text-ap-body max-w-sm mx-auto font-light text-white/70">
+            <p class="mt-4 text-ap-body max-w-sm mx-auto font-medium text-white/50">
                 01 April 2026, 09:00 WIB<br>
             </p>
         </div>
