--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         
         <div class="mb-10">
             <h1 class="text-ap-title text-white !text-[45px]">
-                Undangan <span class="font-sans font-semibold text-white/100">Rapat</span>
+                UNDANGAN <span class="font-sans font-semibold text-white/100">RAPAT</span>
             </h1>
             <p class="mt-4 text-ap-body max-w-sm mx-auto font-medium text-white/50">
                 01 April 2026, 09:00 WIB<br>
