--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </div>
         
         <div class="mb-10">
-            <h1 class="text-ap-title text-white !text-[45px]">
+            <h1 class="text-ap-title text-white tracking-[0.1em] !text-[45px]">
                 UNDANGAN <span class="font-sans font-semibold text-white/100">RAPAT</span>
             </h1>
             <p class="mt-4 text-ap-body max-w-sm mx-auto font-medium text-white/50">
