--- a/main.html
+++ b/main.html
@@ -42,12 +42,12 @@
                 <div class="mb-10 flex flex-col items-center lg:items-start">
                     <img src="assets/img/logo.svg" class="w-20 mb-6 brightness-0 invert" alt="Logo">
                     <span class="text-[14px] font-semibold tracking-[0.4em] uppercase text-white leading-none mb-2">GKSBS Tanjungkarang</span>
-                    <span class="text-[11px] text-white/50 italic">"Gereja yang Menjadi Berkat bagi Masyarakat"</span>
+                    <span class="text-[12px] text-white/80 italic">"Gereja yang Menjadi Berkat bagi Masyarakat"</span>
                 </div>
                 <h1 class="text-3xl md:text-5xl font-bold leading-tight mb-8 text-white">Rapat Koordinasi Masa Perayaan <br class="hidden md:block"> Paskah dan Pentakosta</h1>
                 <div class="space-y-1">
-                    <p class="text-[10px] tracking-[0.4em] text-white/40 uppercase font-bold text-center lg:text-left">Tema</p>
-                    <p class="text-lg md:text-xl font-light italic text-white/80 text-center lg:text-left">"Melangkah dalam Penebusan, Hidup dalam Keutuhan"</p>
+                    <p class="text-[12px] tracking-[0.4em] text-white/85 uppercase font-bold text-center lg:text-left">Tema</p>
+                    <p class="text-lg md:text-xl font-light text-white/80 text-center lg:text-left">"Melangkah dalam Penebusan, Hidup dalam Keutuhan"</p>
                 </div>
             </div>
             
@@ -63,7 +63,7 @@
                     <div class="mb-12">
                         <span class="text-ap-blue font-bold tracking-[0.5em] uppercase text-[12px] block mb-4">Narasumber</span>
                         <h2 class="text-3xl lg:text-4xl font-bold text-ap-black mb-2">Yuniati A.H.M Lomi</h2>
-                        <p class="text-gray-500 font-medium lg:text-lg">Pendeta GKSBS Tanjungkarang</p>
+                        <p class="text-gray-500 text-sm">Pendeta GKSBS Tanjungkarang</p>
                     </div>
                     <div>
                         <span class="text-ap-blue font-bold tracking-[0.5em] uppercase text-[12px] block mb-4">Waktu & Tempat</span>
