--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 
     <div class="fixed inset-0 z-0">
         <video autoplay muted loop playsinline class="w-full h-full object-cover grayscale opacity-40">
-            <source src="assets/video/herovid.mp4" type="video/mp4">
+            <source src="assets/video/mainvid.mp4" type="video/mp4">
         </video>
         <div class="absolute inset-0 z-10" style="background: linear-gradient(to bottom, var(--overlay-start), var(--overlay-end));"></div>
     </div>
@@ -65,15 +65,20 @@
                         <h2 class="text-3xl lg:text-4xl font-bold text-ap-black mb-2">Yuniati A.H.M Lomi</h2>
                         <p class="text-gray-500 text-sm">Pendeta GKSBS Tanjungkarang</p>
                     </div>
-                    <div>
-                        <span class="text-ap-blue font-bold tracking-[0.5em] uppercase text-[12px] block mb-4">Waktu & Tempat</span>
-                        <div class="text-gray-800 space-y-3 mb-10">
-                            <p class="text-gray-500 font-medium lg:text-lg">Rabu, 1 April 2026 Pukul 09.00 WIB s.d Selesai</p>
-                            <p class="font-bold text-xl">Gedung GKSBS Tanjungkarang</p>
-                            <p class="text-gray-500 text-sm">Jl. Sutan Syahris No. 27 Pahoman, Bandar Lampung</p>
-                        </div>
-                        <a href="#" class="inline-block bg-ap-blue text-white px-10 py-4 rounded-full text-[11px] font-bold tracking-[0.2em] hover:bg-blue-600 transition-all shadow-md uppercase">DAPATKAN NAVIGASI</a>
-                    </div>
+                  <div>
+    <span class="text-ap-blue font-bold tracking-[0.5em] uppercase text-[12px] block mb-4">Waktu & Tempat</span>
+    <div class="text-gray-800 mb-10">
+        <p class="text-lg font-medium leading-tight">Rabu, 1 April 2026</p>
+        <p class="text-lg text-gray-500 mb-4">Pukul 09.00 WIB s.d Selesai</p>
+        
+        <p class="font-bold text-xl leading-tight">Gedung GKSBS Tanjungkarang</p>
+        <p class="text-gray-500 text-sm">Jl. Sutan Syahris No. 27 Pahoman, Bandar Lampung</p>
+    </div>
+    
+    <a href="https://maps.google.com/?cid=13793501057723291731&g_mp=Cidnb29nbGUubWFwcy5wbGFjZXMudjEuUGxhY2VzLlNlYXJjaFRleHQ" class="inline-block bg-ap-blue text-white px-10 py-4 rounded-full text-[11px] font-bold tracking-[0.2em] hover:bg-blue-600 transition-all shadow-md uppercase">
+        Dapatkan Navigasi
+    </a>
+</div>
                 </div>
 
                 <div id="rsvp" class="flex flex-col text-center lg:text-left">
